--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.7.0",
     "express": "^4.18.2",
     "nodemon": "^3.1.10",
-    "openai": "^4.5.0"
+    "openai": "^4.5.0",
+    "web3": "^4.16.0"
   }
 }
