--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lighthouse-web3/sdk": "^0.4.3",
     "@worldcoin/idkit": "^2.4.2",
+    "axios": "^1.12.2",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
