--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.26.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "web3": "^4.16.0"
   }
 }
