--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@lighthouse-web3/sdk": "^0.4.3",
+    "@pinata/sdk": "^2.1.0",
     "@worldcoin/idkit": "^2.4.2",
     "axios": "^1.12.2",
     "next": "15.5.4",
+    "pinata": "^2.5.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
