--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@pinata/sdk": "^2.1.0",
     "@worldcoin/idkit": "^2.4.2",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "next": "15.5.4",
     "pinata": "^2.5.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
